feat: add light box & change tag name

--- a/special.html
+++ b/special.html
@@ -42,7 +42,6 @@
       <div class="row">
         <div class="col-md-3 col-6 single-product">
           <div class="pro-img mb-3">
-            <!-- <a href=""></a> -->
             <img
               class="primary-img"
               src="https://vvvshop.com.tw/uploads/products/325/345/d7dd17efde5160318439054b6ab66ce6.png"
@@ -51,7 +50,6 @@
           </div>
           <div class="pro-content">
             <h4 class="mb-3">
-              <!-- <a href=""></a> -->
               【Calbee卡樂比】 POTATO FARM 薯條三兄弟10包 日本必買 |
               日本樂天熱銷
             </h4>
@@ -91,7 +89,7 @@
             </div>
             <div class="mb-3" align="center">
               <button
-                class="btn btn-danger add-cart"
+                class="btn btn-danger add-cart-onepage"
                 type="button"
                 data-id="325"
               >
@@ -102,7 +100,6 @@
         </div>
         <div class="col-md-3 col-6 single-product">
           <div class="pro-img mb-3">
-            <!-- <a href=""></a> -->
             <img
               class="primary-img"
               src="https://vvvshop.com.tw/uploads/products/764/345/58b052aa32a946c678a8ca6d8460819f.jpg"
@@ -111,7 +108,6 @@
           </div>
           <div class="pro-content">
             <h4 class="mb-3">
-              <!-- <a href=""></a> -->
               【YOKU MOKU】綜合YCG-E 雪茄蛋捲(30支裝) 日本代購 送禮推薦 巧克力
               餅乾
             </h4>
@@ -151,7 +147,7 @@
             </div>
             <div class="mb-3" align="center">
               <button
-                class="btn btn-danger add-cart"
+                class="btn btn-danger add-cart-onepage"
                 type="button"
                 data-id="764"
               >
@@ -162,7 +158,6 @@
         </div>
         <div class="col-md-3 col-6 single-product">
           <div class="pro-img mb-3">
-            <!-- <a href=""></a> -->
             <img
               class="primary-img"
               src="https://vvvshop.com.tw/uploads/products/765/345/6efdf040fee3127eccf276f76fe844e0.jpg"
@@ -171,7 +166,6 @@
           </div>
           <div class="pro-content">
             <h4 class="mb-3">
-              <!-- <a href=""></a> -->
               【YOKU MOKU】綜合YCG-D 雪茄蛋捲(20支裝) 日本代購 送禮推薦 巧克力
               餅乾
             </h4>
@@ -211,7 +205,7 @@
             </div>
             <div class="mb-3" align="center">
               <button
-                class="btn btn-danger add-cart"
+                class="btn btn-danger add-cart-onepage"
                 type="button"
                 data-id="765"
               >
@@ -222,7 +216,6 @@
         </div>
         <div class="col-md-3 col-6 single-product">
           <div class="pro-img mb-3">
-            <!-- <a href=""></a> -->
             <img
               class="primary-img"
               src="https://vvvshop.com.tw/uploads/products/1659/345/e0a8032b710c453cf9028a75e1f99472.jpg"
@@ -231,7 +224,6 @@
           </div>
           <div class="pro-content">
             <h4 class="mb-3">
-              <!-- <a href=""></a> -->
               小倉山莊 をぐら山春秋 盒裝(中)(8入*18袋) 日本必買❘日本樂天熱銷
             </h4>
             <div class="row mb-3 text-red">
@@ -270,7 +262,7 @@
             </div>
             <div class="mb-3" align="center">
               <button
-                class="btn btn-danger add-cart"
+                class="btn btn-danger add-cart-onepage"
                 type="button"
                 data-id="1659"
               >
@@ -281,7 +273,6 @@
         </div>
         <div class="col-md-3 col-6 single-product">
           <div class="pro-img mb-3">
-            <!-- <a href=""></a> -->
             <img
               class="primary-img"
               src="https://vvvshop.com.tw/uploads/products/1662/345/aad00eb1b6b73a2d49a268003da95fe4.jpg"
@@ -290,7 +281,6 @@
           </div>
           <div class="pro-content">
             <h4 class="mb-3">
-              <!-- <a href=""></a> -->
               小倉山莊 をぐら山春秋 盒裝(特大)(8入*45袋) 日本必買❘日本樂天熱銷
             </h4>
             <div class="row mb-3 text-red">
@@ -329,7 +319,7 @@
             </div>
             <div class="mb-3" align="center">
               <button
-                class="btn btn-danger add-cart"
+                class="btn btn-danger add-cart-onepage"
                 type="button"
                 data-id="1662"
               >
@@ -340,7 +330,6 @@
         </div>
         <div class="col-md-3 col-6 single-product">
           <div class="pro-img mb-3">
-            <!-- <a href=""></a> -->
             <img
               class="primary-img"
               src="https://vvvshop.com.tw/uploads/products/1663/345/faf018a86496be53076f36cc9f52ac7d.jpg"
@@ -349,7 +338,6 @@
           </div>
           <div class="pro-content">
             <h4 class="mb-3">
-              <!-- <a href=""></a> -->
               SALONIA 直髮離子夾 米色(24mm)
             </h4>
             <div class="row mb-3 text-red">
@@ -388,7 +376,7 @@
             </div>
             <div class="mb-3" align="center">
               <button
-                class="btn btn-danger add-cart"
+                class="btn btn-danger add-cart-onepage"
                 type="button"
                 data-id="1663"
               >
@@ -399,7 +387,6 @@
         </div>
         <div class="col-md-3 col-6 single-product">
           <div class="pro-img mb-3">
-            <!-- <a href=""></a> -->
             <img
               class="primary-img"
               src="https://vvvshop.com.tw/uploads/products/1664/345/d184ebab502411729fcd1d29c91cb6cf.jpg"
@@ -408,7 +395,6 @@
           </div>
           <div class="pro-content">
             <h4 class="mb-3">
-              <!-- <a href=""></a> -->
               SALONIA 直髮離子夾 白色(24mm)
             </h4>
             <div class="row mb-3 text-red">
@@ -447,7 +433,7 @@
             </div>
             <div class="mb-3" align="center">
               <button
-                class="btn btn-danger add-cart"
+                class="btn btn-danger add-cart-onepage"
                 type="button"
                 data-id="1664"
               >
@@ -458,7 +444,6 @@
         </div>
         <div class="col-md-3 col-6 single-product">
           <div class="pro-img mb-3">
-            <!-- <a href=""></a> -->
             <img
               class="primary-img"
               src="https://vvvshop.com.tw/uploads/products/1665/345/68050187d5f1acc6f769325620b12d40.jpg"
@@ -467,7 +452,6 @@
           </div>
           <div class="pro-content">
             <h4 class="mb-3">
-              <!-- <a href=""></a> -->
               SALONIA 直髮離子夾 黑色(24mm)
             </h4>
             <div class="row mb-3 text-red">
@@ -506,7 +490,7 @@
             </div>
             <div class="mb-3" align="center">
               <button
-                class="btn btn-danger add-cart"
+                class="btn btn-danger add-cart-onepage"
                 type="button"
                 data-id="1665"
               >
@@ -517,7 +501,6 @@
         </div>
         <div class="col-md-3 col-6 single-product">
           <div class="pro-img mb-3">
-            <!-- <a href=""></a> -->
             <img
               class="primary-img"
               src="https://vvvshop.com.tw/uploads/products/1666/345/ab99b7eb1e0529bb09841f5ff65403a6.jpg"
@@ -526,7 +509,6 @@
           </div>
           <div class="pro-content">
             <h4 class="mb-3">
-              <!-- <a href=""></a> -->
               SALONIA 直髮離子夾 深藍(24mm)
             </h4>
             <div class="row mb-3 text-red">
@@ -565,7 +547,7 @@
             </div>
             <div class="mb-3" align="center">
               <button
-                class="btn btn-danger add-cart"
+                class="btn btn-danger add-cart-onepage"
                 type="button"
                 data-id="1666"
               >
@@ -576,7 +558,6 @@
         </div>
         <div class="col-md-3 col-6 single-product">
           <div class="pro-img mb-3">
-            <!-- <a href=""></a> -->
             <img
               class="primary-img"
               src="https://vvvshop.com.tw/uploads/products/1667/345/07990e829223d4cce853f507f26bf29e.jpg"
@@ -585,7 +566,6 @@
           </div>
           <div class="pro-content">
             <h4 class="mb-3">
-              <!-- <a href=""></a> -->
               SALONIA 直髮離子夾 灰色(24mm)
             </h4>
             <div class="row mb-3 text-red">
@@ -624,7 +604,7 @@
             </div>
             <div class="mb-3" align="center">
               <button
-                class="btn btn-danger add-cart"
+                class="btn btn-danger add-cart-onepage"
                 type="button"
                 data-id="1667"
               >
@@ -632,6 +612,30 @@
               </button>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="LightBox" class="light__box">
+      <div class="light__box__background"></div>
+      <div class="light__box__item">
+        <div class="light__box__image">
+          <img
+            src="https://pic.pimg.tw/enjoyer/1675142482-2004798166-g_n.jpg"
+            alt="年齡確認聲明"
+          />
+        </div>
+        <div class="light__box__buttons">
+          <input
+            type="button"
+            class="light__box__button confirm__no"
+            value="不同意"
+          />
+          <input
+            type="button"
+            class="light__box__button confirm__yes"
+            value="同意"
+          />
         </div>
       </div>
     </div>
@@ -666,20 +670,92 @@
         color: #333333;
         opacity: 0.85;
       }
+      /* User age confirm Light box */
+      .light__box {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+      }
+      .light__box .light__box__background {
+        width: 100vw;
+        height: 100vh;
+        background: #444444aa;
+      }
+      .light__box .light__box__item {
+        position: absolute;
+        /* width: 100%;
+        height: 100%; */
+        max-width: 400px;
+        max-height: 300px;
+        margin: auto;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        cursor: pointer;
+      }
+      .light__box img {
+        width: 100%;
+        height: 100%;
+      }
+      .light__box__buttons {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        margin: 20px 0;
+      }
+      .light__box__buttons .light__box__button {
+        padding: 10px 30px;
+        margin: 0;
+        width: calc(100% - 52%);
+        background-color: transparent;
+        font-weight: bold;
+        color: #ffffff;
+        border: 1px solid #ffffff;
+      }
+      .light__box__buttons .light__box__button:active {
+        border: 1px solid #666666;
+      }
+      .light__box__button.confirm__yes {
+        background-color: #1bc665;
+      }
+      .light__box__button.confirm__no {
+        background-color: #d6344c;
+      }
+      .light__box__hide {
+        display: none;
+      }
     </style>
+    <script>
+      const LightBox = document.querySelector('#LightBox')
+      const confirmYes = document.querySelector('.confirm__yes')
+      const confirmNo = document.querySelector('.confirm__no')
+      confirmYes.addEventListener('click', () =>
+        LightBox.classList.add('light__box__hide'),
+      )
+      confirmNo.addEventListener('click', () => {
+        location.href = 'https://vvvshop.com.tw/'
+        // console.warn(window)
+        // if (window.history.length === 1) {
+        //   location.href = 'https://vvvshop.com.tw/'
+        //   return
+        // }
+        // window.history.back()
+      })
+    </script>
     <script>
       const itemBaseLink = 'https://vvvshop.com.tw/products/display/'
       document.addEventListener('DOMContentLoaded', () => {
         const products = document.querySelectorAll('.single-product')
         products.forEach((p, i) => {
           const contentImage = JSON.parse(
-            JSON.stringify(p.children[0].innerHTML),
+            JSON.stringify(p.querySelector('.pro-img').innerHTML),
           )
-          const url = p.children[0].children[0].getAttribute('src')
-          const urlArr = url.split('/')
-          const item_number = urlArr[3]
+          const item_number = p.querySelector('.add-cart-onepage').dataset.id
           const contentTitle = JSON.parse(
-            JSON.stringify(p.children[1].children[0].innerHTML),
+            JSON.stringify(p.getElementsByTagName('h4')[0].innerHTML),
           )
           p.children[0].innerHTML = `
             <a href="${itemBaseLink}${item_number}" target="_blank">
