feat: set banner rwd

--- a/special.html
+++ b/special.html
@@ -666,6 +666,12 @@
         color: #333333;
         opacity: 0.85;
       }
+      .section-title p{
+        display: none
+      }
+      .section01 img{
+        width: 100%
+      }
     </style>
     <script>
       const itemBaseLink = 'https://vvvshop.com.tw/products/display/'
