--- a/special.html
+++ b/special.html
@@ -639,6 +639,68 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="footer">
+        <div class="container">
+          <div class="row pt-20 pb-20">
+            <div class="col-md-4">
+              <div class="single-footer mb-sm-40 section">
+                <span class="section-postion" id="section3"></span>
+                <h4 class="footer-title">客戶服務</h4>
+                <div class="footer-content">
+                  <ul class="footer-list">
+                    <li>連絡電話：02-2545-8780#850</li>
+                    <li>公司傳真：</li>
+                    <li>公司email：rick@viewec.tw</li>
+                    <li>聯絡地址：台北市松山區復興北路191號5樓</li>
+                  </ul>
+                </div>
+                <iframe
+                  class="d-md-none footerFb"
+                  src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;layout=button_count&amp;size=large&amp;width=116&amp;height=28&amp;appId"
+                  width="116"
+                  height="28"
+                  style="border: none; overflow: hidden;"
+                  scrolling="no"
+                  frameborder="0"
+                  allowtransparency="true"
+                  allow="encrypted-media"
+                ></iframe>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="single-footer mb-sm-40" style="display: none;">
+                <h4 class="footer-title" id="section4">匯款方式</h4>
+                <div class="footer-content">
+                  <ul class="footer-list">
+                    <li>匯款帳號：</li>
+                    <li>匯款戶名：</li>
+                    <li>匯款銀行：</li>
+                    <li>銀行分行：</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="single-footer mb-sm-40">
+                <h4 class="footer-title">注意事項</h4>
+                <div class="footer-content">
+                  本店舖「日安優物」提供為消費者客製化代購國外商品之服務，商品皆係依照消費者要求，代為訂購國外商品。本店鋪將於收到完成付款之訂單後，代台灣消費者向國外商家訂購商品，再協助台灣消費者將訂購商品寄回台灣。經國外境內配送／兩地海關／台灣本島境內配送。
+                  <br />
+                  <br />
+                  「依消費者要求所為之客製化給付」，屬中華民國消費者保護法第十九條第一項但書所稱合理例外情事之規定，故不適用商品鑑賞期（即消費者保護
+                </div>
+              </div>
+            </div>
+            <div class="col-12 text-center">
+              <div class="copyright">
+                © 2023 by ViewECJapan株式会社
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <style>
       .single-product:hover {
         cursor: pointer;
@@ -676,6 +738,23 @@
       .section01 img {
         width: 100%;
       }
+      footer .col-md-4 {
+        margin: 8px 0;
+      }
+      footer .col-md-4:nth-child(2) {
+        display: none;
+      }
+      footer .col-md-4:nth-child(3) {
+        max-width: 66.666666% !important;
+        flex: 0 0 66.666666%;
+        width: 100%;
+      }
+      @media screen and (max-width: 768px) {
+        footer .col-md-4:nth-child(3) {
+          max-width: unset !important;
+          flex: unset;
+        }
+      }
       /* User age confirm Light box */
       .light__box {
         position: fixed;
@@ -683,6 +762,7 @@
         left: 0;
         width: 100vw;
         height: 100vh;
+        z-index: 100;
       }
       .light__box .light__box__background {
         width: 100vw;
@@ -764,6 +844,12 @@
             </a>
           `
         })
+        const content = `
+        本店舖「日安優物」提供為消費者客製化代購國外商品之服務，商品皆係依照消費者要求，代為訂購國外商品。本店鋪將於收到完成付款之訂單後，代台灣消費者向國外商家訂購商品，再協助台灣消費者將訂購商品寄回台灣。經國外境內配送／兩地海關／台灣本島境內配送。為完成商品訂購及配送，您的訂單及配送資料將提供給國外商家及物流業者進行必要之處理、利用，詳細個人資料告知事項請參本公司。
+        <br><br>「依消費者要求所為之客製化給付」，屬中華民國消費者保護法第十九條第一項但書所稱合理例外情事之規定，故不適用商品鑑賞期（即消費者保護法第十九條第一項之解除權），除為本身商品內容錯誤異常或有非人為因素所致之商品損毀、刮傷（例如：配送的訂單內容與實際訂單內容不符合、商品本體有刮傷等）、或商品毀損或不完整的情形，才能進行退貨申請。綜上說明，若非前述情形，無法進行退貨作業，敬請見諒。運送過程中外盒難免會有痕跡，如您介意請再次考量是否可接受。
+        `
+        const footerContent = document.querySelectorAll('.footer-content')[2]
+        footerContent.innerHTML = content
       })
     </script>
   </body>
