--- a/special.html
+++ b/special.html
@@ -621,7 +621,7 @@
       <div class="light__box__item">
         <div class="light__box__image">
           <img
-            src="https://pic.pimg.tw/enjoyer/1675142482-2004798166-g_n.jpg"
+            src="https://vvvshop.com.tw/userfiles/shop-1/image/warning_confirm-banner.jpg"
             alt="年齡確認聲明"
           />
         </div>
@@ -782,8 +782,9 @@
         position: absolute;
         /* width: 100%;
         height: 100%; */
+        display: table;
         max-width: 400px;
-        max-height: 300px;
+        padding:  0 0 18px 0;
         margin: auto;
         top: 0;
         bottom: 0;
