--- a/special.html
+++ b/special.html
@@ -923,9 +923,6 @@
     </footer>
     <style>
       /* scroll to product, scroll to top */
-      html {
-        scroll-behavior: smooth;
-      }
       .scroll__to__product {
         position: fixed;
         width: 100%;
@@ -956,7 +953,7 @@
         pointer-events: auto;
       }
       .scroll__to__product img {
-        max-width: 30px;
+        max-width: 30px !important;
         margin-left: 5px;
       }
       .scroll__to__top {
@@ -973,9 +970,11 @@
         user-select: none;
         padding: 12px;
       }
-      .scroll__to__top img{
-        max-width: 100%;
-        max-height: 100%
+      .scroll__to__top img {
+        width: 100%;
+        height: 100%;
+        max-width: 30px;
+        max-height: 30px;
       }
       .scroll__to__top.scroll__to__top-active {
         opacity: 1;
@@ -1044,10 +1043,12 @@
       footer .copyright {
         margin: 14px 0;
       }
-      @media screen and (max-width: 1200px) {
+      @media screen and (max-width: 1450px) {
         .scroll__to__top {
           right: 50px;
         }
+      }
+      @media screen and (max-width: 1200px) {
         .single-product .number-input {
           margin-top: 0px !important;
         }
@@ -1240,10 +1241,13 @@
           window.scrollTo({ top: 0 })
         })
         scrollToProductListBTN.addEventListener('click', () => {
-          window.scrollTo({ top: productListTitle.getBoundingClientRect().top })
+          window.scrollTo({
+            top: productListTitle.offsetTop - 70
+          })
         })
         window.addEventListener('scroll', () => {
           const productListTitleRect = productListTitle.getBoundingClientRect()
+
           if (productListTitleRect.top < window.innerHeight) {
             scrollToProductListBTN.classList.remove(
               'scroll__to__product-active'
